
  * checks/{control-file,fields}.{desc,pm}:
    + [NT] Apply patch from Johannes Schauer to support the
      new build profile syntax.  (Closes: #763773)
  * checks/dbus.{desc,pm}:
    + [NT] New check by Simon McVittie to discover some dbus
      related issues.  (Closes: #762609)
  * checks/source-copyright.pm:
    + [NT] Apply patch from Johannes Schauer to optimise the
      check.
  * checks/watch-file.pm:
    + [NT] Fix undef warning with some watch files.  Thanks
      to Axel Beckert for reporting the bug.
      (Closes: #765995)

  * collection/{bin-pkg-control,unpacked}:
    + [NT] Pass "-m" to tar to make it avoid "correcting" the
      timestamp of the extracted files.  Lintian does not need
      it for correctness, so it can make tar save a few syscalls
      here.
    + [NT] Explicitly pass tar options to make it extract files
      as the current user and applying the users umask.  This is
      mostly to be explicit about how things are extracted.
  * collection/file-info:
    + [NT] Stop collecting file-info for "non-files".  The output
      is not used and often trivial / predictable from other data
      input already available.
  * collection/strings:
    + [NT] Stop creating "elf-index" file as nothing uses it.
  * collection/unpacked:
    + [NT] Gracefully handle when symlink targets contains
      newlines.  Thanks to Faheem Mitha for reporting the bug.
      (Closes: #765311)

  * frontend/lintian:
    + [NT] Aggressively reset the environment a well-defined
      state at start up.  Only ENV variables starting with
      "LINTIAN_" (and a select few well known variables) are
      preserved.
    + [NT] Runtime for collections and checks now only requires
      a single --debug option.  Lintian will now also show
      runtime for other things (e.g. total runtimes).
    + [NT] Add --perf-debug and --perf-output options to enable
      logging for performance data.  This is mostly intended